# open-mvs

./: CMakeLists.txt  README.md  dev_setup.sh  setup.sh
libs/Common/: Config.h
libs/IO/: CMakeLists.txt
libs/MVS/: SceneReconstruct.cpp
